--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^9.1.0
+  google_sign_in: ^5.0.7
   intro_slider: ^3.0.2
   sizer: ^2.0.13
   device_preview: ^0.7.4
@@ -37,6 +39,7 @@ dependencies:
   firebase_database: ^7.2.1
   firebase_auth: ^3.1.0
   flutter_signin_button: ^2.0.0
+  flutter_svg: ^0.22.0
 
 
 dev_dependencies:
