--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   firebase_database: ^7.2.1
   firebase_auth: ^3.1.0
   flutter_signin_button: ^2.0.0
+  auto_size_text_field: ^0.1.7
+  share: ^2.0.4
+  http: ^0.13.3
   flutter_svg: ^0.22.0
 
 
