--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firestore_search: ^0.1.3
   cloud_firestore: ^2.5.1
   firebase_storage: ^10.0.3
   font_awesome_flutter: ^9.1.0
@@ -45,6 +46,7 @@ dependencies:
   auto_size_text_field: ^0.1.7
   share: ^2.0.4
   http: ^0.13.3
+  persistent_bottom_nav_bar: ^4.0.2
   flutter_svg: ^0.22.0
 
 
